--- a/coplimeClientWeb/nbproject/project.properties
+++ b/coplimeClientWeb/nbproject/project.properties
@@ -27,6 +27,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.primefaces-3.5.jar=web\\WEB-INF\\lib\\primefaces-3.5.jar
+file.reference.primefaces-mobile-0.9.4.jar=web\\WEB-INF\\lib\\primefaces-mobile-0.9.4.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -41,8 +43,9 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.primefaces.classpath}:\
-    ${reference.coplime-ejb.dist}
+    ${reference.coplime-ejb.dist}:\
+    ${file.reference.primefaces-3.5.jar}:\
+    ${file.reference.primefaces-mobile-0.9.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
