--- a/coplimeClientWeb/web/WEB-INF/web.xml
+++ b/coplimeClientWeb/web/WEB-INF/web.xml
@@ -21,4 +21,49 @@
     <welcome-file-list>
         <welcome-file>faces/index.xhtml</welcome-file>
     </welcome-file-list>
+    <security-constraint>
+        <display-name>Constraint1</display-name>
+        <web-resource-collection>
+            <web-resource-name>Páginas administrativas</web-resource-name>
+            <description>Relacionadas con poblado inicial de la aplicación</description>
+            <url-pattern>/admin/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <description/>
+            <role-name>Administrador</role-name>
+        </auth-constraint>
+    </security-constraint>
+    <security-constraint>
+        <display-name>Constraint2</display-name>
+        <web-resource-collection>
+            <web-resource-name>usuarios</web-resource-name>
+            <description/>
+            <url-pattern>/users/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <description/>
+            <role-name>Inspector</role-name>
+            <role-name>Operario</role-name>
+        </auth-constraint>
+    </security-constraint>
+    <login-config>
+        <auth-method>FORM</auth-method>
+        <realm-name>JDBCRealm</realm-name>
+        <form-login-config>
+            <form-login-page>/index.xhtml</form-login-page>
+            <form-error-page>/pobladoInicial.xhtml</form-error-page>
+        </form-login-config>
+    </login-config>
+    <security-role>
+        <description/>
+        <role-name>Administrador</role-name>
+    </security-role>
+    <security-role>
+        <description/>
+        <role-name>Inspector</role-name>
+    </security-role>
+    <security-role>
+        <description/>
+        <role-name>Operario</role-name>
+    </security-role>
 </web-app>
