--- a/coplimeClientWeb/web/WEB-INF/web.xml
+++ b/coplimeClientWeb/web/WEB-INF/web.xml
@@ -26,7 +26,7 @@
         <web-resource-collection>
             <web-resource-name>Páginas administrativas</web-resource-name>
             <description>Relacionadas con poblado inicial de la aplicación</description>
-            <url-pattern>/admin/*</url-pattern>
+            <url-pattern>/faces/admin/*</url-pattern>
         </web-resource-collection>
         <auth-constraint>
             <description/>
@@ -38,20 +38,21 @@
         <web-resource-collection>
             <web-resource-name>usuarios</web-resource-name>
             <description/>
-            <url-pattern>/users/*</url-pattern>
+            <url-pattern>/faces/users/*</url-pattern>
         </web-resource-collection>
         <auth-constraint>
             <description/>
+            <role-name>Administrador</role-name>
             <role-name>Inspector</role-name>
             <role-name>Operario</role-name>
         </auth-constraint>
     </security-constraint>
     <login-config>
         <auth-method>FORM</auth-method>
-        <realm-name>JDBCRealm</realm-name>
+        <realm-name>jdbcRealm</realm-name>
         <form-login-config>
-            <form-login-page>/index.xhtml</form-login-page>
-            <form-error-page>/pobladoInicial.xhtml</form-error-page>
+            <form-login-page>/faces/index.xhtml</form-login-page>
+            <form-error-page>/faces/pobladoInicial.xhtml</form-error-page>
         </form-login-config>
     </login-config>
     <security-role>
