Arreglado problema de primefaces mobile
-Arreglado problema de primefaces mobile usando versión snapshot
-Arreglados problemas de login
-Agregado menu para los 3 tipos de usuario en algunsa vistas "ver"
-Implementado ver inspectores y agregar inspectores

--- a/coplime/nbproject/project.properties
+++ b/coplime/nbproject/project.properties
@@ -1,7 +1,7 @@
 build.classes.excludes=**/*.java,**/*.form,**/.nbattrs
 build.dir=build
 build.generated.dir=${build.dir}/generated
-client.module.uri=coplimeClientWeb
+client.module.uri=coplime_client_web
 client.urlPart=
 debug.classpath=${javac.classpath}::${jar.content.additional}:${run.classpath}
 display.browser=true
@@ -23,7 +23,7 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.content.additional=\
     ${reference.coplime-ejb.dist-ear}:\
-    ${reference.coplimeClientWeb.dist-ear}
+    ${reference.coplime_client_web.dist-ear}
 jar.name=coplime.ear
 javac.debug=true
 javac.deprecation=false
@@ -33,9 +33,9 @@ meta.inf=src/conf
 no.dependencies=false
 platform.active=default_platform
 project.coplime-ejb=coplime-ejb
-project.coplimeClientWeb=../coplimeClientWeb
+project.coplime_client_web=../coplime_client_web
 reference.coplime-ejb.dist-ear=${project.coplime-ejb}/dist/coplime-ejb.jar
-reference.coplimeClientWeb.dist-ear=${project.coplimeClientWeb}/dist/coplimeClientWeb.war
+reference.coplime_client_web.dist-ear=${project.coplime_client_web}/dist/coplime_client_web.war
 resource.dir=setup
 run.classpath=
 source.root=.
