configurado Git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 /coplime/build/
 /coplime_client_web/build/
 /coplime_client_web/dist/
+/coplime/coplime-ejb/nbproject/private/
+/coplime/coplime-ejb/nbproject/
+/coplime_client_web/nbproject/
+/coplime_client_web/nbproject/private/
+/coplime/nbproject/
