--- a/coplime_client_web/web/WEB-INF/web.xml
+++ b/coplime_client_web/web/WEB-INF/web.xml
@@ -67,4 +67,12 @@
         <description/>
         <role-name>Operario</role-name>
     </security-role>
+    <filter>
+        <filter-name>PrimeFaces FileUpload Filter</filter-name>
+        <filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>PrimeFaces FileUpload Filter</filter-name>
+        <servlet-name>Faces Servlet</servlet-name>
+    </filter-mapping>
 </web-app>
