--- a/coplime_client_web/nbproject/project.properties
+++ b/coplime_client_web/nbproject/project.properties
@@ -28,8 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.commons-fileupload-1.3.jar=C:\\Users\\victor\\Documents\\NetBeansProjects\\coplime_pingeso\\coplime_client_web\\web\\WEB-INF\\lib\\commons-fileupload-1.3.jar
-file.reference.commons-io-2.4.jar=C:\\Users\\victor\\Documents\\NetBeansProjects\\coplime_pingeso\\coplime_client_web\\web\\WEB-INF\\lib\\commons-io-2.4.jar
+file.reference.commons-fileupload-1.3.jar=web\\WEB-INF\\lib\\commons-fileupload-1.3.jar
+file.reference.commons-io-2.4.jar=web\\WEB-INF\\lib\\commons-io-2.4.jar
 file.reference.primefaces-3.5.jar=web\\WEB-INF\\lib\\primefaces-3.5.jar
 file.reference.primefaces-mobile-0.9.5-20130516.100321-1.jar=web\\WEB-INF\\lib\\primefaces-mobile-0.9.5-20130516.100321-1.jar
 includes=**
