--- a/coplime/coplime-ejb/nbproject/private/private.properties
+++ b/coplime/coplime-ejb/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\victor\\AppData\\Roaming\\NetBeans\\7.3\\config\\GlassFishEE6\\Properties\\gfv3-625053904.properties
+deploy.ant.properties.file=C:\\Users\\Carlos Barrera\\AppData\\Roaming\\NetBeans\\7.3\\gfv3-312634849.properties
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/glassfish3/glassfish/domains/domain1
 j2ee.server.home=C:/glassfish3/glassfish
@@ -6,4 +6,4 @@ j2ee.server.instance=[C:\\glassfish3\\glassfish;C:\\glassfish3\\glassfish\\domai
 j2ee.server.middleware=C:/glassfish3
 javac.debug=true
 javadoc.preview=true
-netbeans.user=C:\\Users\\victor\\AppData\\Roaming\\NetBeans\\7.3
+netbeans.user=C:\\Users\\Carlos Barrera\\AppData\\Roaming\\NetBeans\\7.3
