--- a/coplime_client_web/web/WEB-INF/web.xml
+++ b/coplime_client_web/web/WEB-INF/web.xml
@@ -12,6 +12,10 @@
         <param-name>primefaces.PUBLIC_CAPTCHA_KEY</param-name>    
         <param-value>6LclhuQSAAAAAPCj9sO-3xbeRODZivW0BEjCtvGp</param-value> 
     </context-param>
+    <context-param>
+        <param-name>primefaces.THEME</param-name>
+        <param-value>bootstrap</param-value>
+    </context-param>
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
