tratando de funcionar "ver detalles notificación"

--- a/coplime_client_web/web/WEB-INF/web.xml
+++ b/coplime_client_web/web/WEB-INF/web.xml
@@ -13,6 +13,10 @@
         <param-value>6LclhuQSAAAAAPCj9sO-3xbeRODZivW0BEjCtvGp</param-value> 
     </context-param>
     <context-param>
+        <param-name>javax.faces.PARTIAL_STATE_SAVING</param-name>
+        <param-value>false</param-value>
+    </context-param>
+    <context-param>
         <param-name>primefaces.THEME</param-name>
         <param-value>bootstrap</param-value>
     </context-param>
