--- a/coplime_client_web/web/WEB-INF/web.xml
+++ b/coplime_client_web/web/WEB-INF/web.xml
@@ -5,12 +5,12 @@
         <param-value>development</param-value>
     </context-param>
     <context-param>
-        <param-name>primefaces.PRIVATE_CAPTCHA_KEY</param-name>    
-        <param-value>6LclhuQSAAAAALjYo6rOzAxzQvLo3R8SzNKIHoFC</param-value> 
+        <param-name>primefaces.PRIVATE_CAPTCHA_KEY</param-name>
+        <param-value>6LclhuQSAAAAALjYo6rOzAxzQvLo3R8SzNKIHoFC</param-value>
     </context-param>
     <context-param>
-        <param-name>primefaces.PUBLIC_CAPTCHA_KEY</param-name>    
-        <param-value>6LclhuQSAAAAAPCj9sO-3xbeRODZivW0BEjCtvGp</param-value> 
+        <param-name>primefaces.PUBLIC_CAPTCHA_KEY</param-name>
+        <param-value>6LclhuQSAAAAAPCj9sO-3xbeRODZivW0BEjCtvGp</param-value>
     </context-param>
     <context-param>
         <param-name>javax.faces.PARTIAL_STATE_SAVING</param-name>
@@ -60,6 +60,30 @@
             <description/>
             <role-name>Administrador</role-name>
             <role-name>Inspector</role-name>
+            <role-name>Operario</role-name>
+        </auth-constraint>
+    </security-constraint>
+    <security-constraint>
+        <display-name>inspector_pages</display-name>
+        <web-resource-collection>
+            <web-resource-name>Sólo inspector</web-resource-name>
+            <description/>
+            <url-pattern>/faces/users/inspector/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <description/>
+            <role-name>Inspector</role-name>
+        </auth-constraint>
+    </security-constraint>
+    <security-constraint>
+        <display-name>operario_pages</display-name>
+        <web-resource-collection>
+            <web-resource-name>Sólo operario de mantención</web-resource-name>
+            <description/>
+            <url-pattern>/faces/users/operario/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <description/>
             <role-name>Operario</role-name>
         </auth-constraint>
     </security-constraint>
