--- a/coplime_client_web/web/WEB-INF/web.xml
+++ b/coplime_client_web/web/WEB-INF/web.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+     <error-page>
+        <error-code>403</error-code>
+        <location>/faces/errors/403.xhtml</location>
+    </error-page>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/faces/errors/404.xhtml</location>
+    </error-page>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/faces/errors/500.xhtml</location>
+    </error-page>
     <context-param>
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>development</param-value>
