--- a/coplime_client_web/web/WEB-INF/web.xml
+++ b/coplime_client_web/web/WEB-INF/web.xml
@@ -55,7 +55,7 @@
     </welcome-file-list>
     <error-page>
         <exception-type>com.sun.faces.context.FacesFileNotFoundException</exception-type>
-        <location>/errors/404.xhtml</location>
+        <location>/faces/errors/404.xhtml</location>
     </error-page>
     <security-constraint>
         <display-name>admin_pages</display-name>
