--- a/coplime_client_web/web/WEB-INF/web.xml
+++ b/coplime_client_web/web/WEB-INF/web.xml
@@ -18,7 +18,7 @@
     </error-page>
     <context-param>
         <param-name>javax.faces.PROJECT_STAGE</param-name>
-        <param-value>development</param-value>
+        <param-value>production</param-value>
     </context-param>
     <context-param>
         <param-name>primefaces.PRIVATE_CAPTCHA_KEY</param-name>
